<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="app_name">Recruitment</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="companysearch">Company Search:</string>
    <string name="jobsearch">Job Search:</string>
	<string name="jobsalarysearch">Job Salary Search:</string>
	<string name="avgsalarysearch">Average Salary Search:</string>
    <string name="advancesearch">Advanced Search</string>
    <string name="major">Major:</string>
    <string name="skill">Skill:</string>
    <string name="school">School:</string>
    <string name="name">Name:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="field">Field:</string>
    <string name="location">Location:</string>
    <string name="phone">Phone:</string>
    <string name="salary">Salary</string>
    <string name="salar2">Salary:</string>
    <string name="avgsala">Average Salary</string>
    <string name="seeker">Seeker</string>
    <string name="company">Company</string>
    <string name="company2">Company:</string>
    <string name="position">Position:</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="update">Update Profile</string>
    <string name="rememberpassword">Remember Password</string>
    <string name="autologin">Auto Login</string>
    <string name="setting">Setting</string>
    <string name="other">Other</string>
    <string name="loginsetting">Login Setting</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="setting_about">关于</string>
    <string name="dis_copyright">wangjiahe2009@gmail.com</string>
    <string name="setting_update">检查更新</string>
    <string name="noupdate">暂无更新</string>
    <string name="dis_version">版本 V1.0.0</string>
    <string name="setting_autologin">自动登录</string>
    <string name="dis_noautologin">取消自动登录</string>
    <string name="setting_rempsw">记住密码</string>
    <string name="dis_clearpsw">清除登录密码</string>
    <string name="rem_removed">密码已清除</string>
    <string name="auto_removed">自动登录已取消</string>
    <string name="apply_room">选择空闲教室:</string>
    <string name="apply_time">申请时间:</string>
    <string name="building">教学楼</string>
    <string name="classroom">教室</string>
    <string name="line">~</string>
    <string name="setfromtime">起始</string>
    <string name="settotime">结束</string>
    <string name="setdate">日期</string>
    <string name="submit_apply_time">提交申请时间</string>
    <string name="submit_apply">提交教室申请</string>

</resources>